welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: not found: value occ
    occ = compteur(k-1,tab)
    ^golomb:6: error: not found: value occ
    if (occ == tab(k-1)) {
        ^golomb:4: error: type mismatch;
 found   : Unit
 required: Int
  for (k <- 1 to num-1) {
         ^